# cpp_opengl_template

./: CMakeLists.txt  README.md
src/: app.cpp  app.h  game.cpp  game.h  input.cpp  input.h  main.cpp  main.h  render.cpp  render.h  rendering.cpp
src/app/: CMakeLists.txt  app.cpp  app.h
src/game/: CMakeLists.txt  game.cpp  game.h
src/input/: CMakeLists.txt  input.cpp  input.h
src/libs/glad/: glad.c  glad.h
src/render/: CMakeLists.txt  render.cpp  render.h
src/render/shaders/: default-fragment-shader.glsl  default-vertex-shader.glsl
